add both requests and httplib/urllib

--- a/languages/python/templates/rpc_requests.py.hbs
+++ b/languages/python/templates/rpc_requests.py.hbs
@@ -36,6 +36,9 @@ def rpc{{flatPath resource}}_{{method}}(self,
 
 {{/each}}
 
-if __name__=='__main__':
-   main()
+def main():
+  print "main"
+  pass
+
+if __name__=='__main__': main()
 
