add mock object p;us importJson

--- a/languages/python/templates/test.py.hbs
+++ b/languages/python/templates/test.py.hbs
@@ -1,3 +1,27 @@
+qq
+
+{{importJson . "languages/python/qwert.json" "qwert"}}
+
+ww
+
+{{keys .}}
+
+===
+
+{{id}} == {{qwert}} == {{baseUri}}
+
+ee
+
+{{qwert}}
+
+rr
+
+{{qwert.q}}
+
+{{stringify qwert.w}}
+
+tt
+
 import gevent.monkey;gevent.monkey.patch_all()
 import geventhttpclient.httplib;geventhttpclient.httplib.patch()
 from geventhttpclient.httplib import HTTPConnection,HTTPSConnection
